--- a/.github/workflows/BuildAndPushDockerImage.yml
+++ b/.github/workflows/BuildAndPushDockerImage.yml
@@ -86,15 +86,15 @@ jobs:
         run: |
           cp -r $GITHUB_WORKSPACE/HolismHolding/Fonts /HolismHolding/Fonts
 
-      - name: Get HolismSite/Infra
+      - name: Get HolismSite/Next
         uses: actions/checkout@v3
         with:
-          repository: HolismSite/Infra
+          repository: HolismSite/Next
           token: ${{ secrets.PAT }}
-          path: HolismSite/Infra
-      - name: Copy HolismSite/Infra to root
+          path: HolismSite/Next
+      - name: Copy HolismSite/Next to root
         run: |
-          cp -r $GITHUB_WORKSPACE/HolismSite/Infra /HolismSite/Infra
+          cp -r $GITHUB_WORKSPACE/HolismSite/Next /HolismSite/Next
 
       - name: Get HolismSite/Qwik
         uses: actions/checkout@v3
